crates/paladin-auth-tui/tests/snapshots/view_snapshots__snapshot_create_vault_enter_passphrase_typing.snap
---
source: crates/paladin-auth-tui/tests/view_snapshots.rs
expression: "render_to_text(&state, snapshot_now(), 80, 12)"
---
┌ Paladin Auth — create vault ─────────────────────────────────────────────────┐
│                                                                              │
│  Vault: /var/lib/paladin-auth/vault.bin                                      │
│                                                                              │
│  Enter a passphrase to protect this vault. It cannot be recovered if lost.   │
│                                                                              │
│  Passphrase:   •••••••                                                       │
│  Confirmation: █                                                             │
│                                                                              │
│  Tab or ↑/↓ switches fields; Enter advances or submits; Esc returns; Ctrl-C  │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
