crates/paladin-auth-tui/tests/snapshots/view_snapshots__snapshot_edit_modal_duplicate_account.snap
---
source: crates/paladin-auth-tui/tests/view_snapshots.rs
expression: rendered
---
┌ Paladin Auth [plaintext] ────────────────────────────────────────────────────┐
│ Search:                                                                      │
│ ──────────────────────────────────────────────────────────────────────────── │
│   GitH┌ Edit account ────────────────────────────────────────────────┐55 062 │
│ ▶ GitH│ Editing the following account:                               │55 062 │
│       │ GitHub:alice@example.com                                     │       │
│       │                                                              │       │
│       │ Label:      [ bob@example.com ]                              │       │
│       │ Issuer:     [ GitHub ]                                       │       │
│       │ Icon hint:  ▶ Leave unchanged ◀    Default from issuer       │       │
│       │ Slug:       [ github ]                                       │       │
│       │                                                              │       │
│       │ account already exists with the same (secret, issuer, label) │       │
│       │                                                              │       │
│       │                                                              │       │
│       │      Tab/Shift-Tab cycle  ·  Enter submit  ·  Esc cancel     │       │
│       └──────────────────────────────────────────────────────────────┘       │
│ ──────────────────────────────────────────────────────────────────────────── │
│ [↑↓] move  [enter] copy  [C] copy-next  [n] next-HOTP  [a] add  [/] find     │
└──────────────────────────────────────────────────────────────────────────────┘
