crates/paladin-auth-tui/tests/snapshots/view_snapshots__snapshot_edit_modal_status_line_confirmation.snap
---
source: crates/paladin-auth-tui/tests/view_snapshots.rs
expression: rendered
---
┌ Paladin Auth [plaintext] ────────────────────────────────────────────────────┐
│ Search:                                                                      │
│ ──────────────────────────────────────────────────────────────────────────── │
│ ▶ GitHub (ben@example.com)            914 994  ██████░░░░   18s  ↪   255 062 │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│ ──────────────────────────────────────────────────────────────────────────── │
│ Edited GitHub:ben@example.com.                                               │
└──────────────────────────────────────────────────────────────────────────────┘
