crates/paladin-auth-tui/tests/snapshots/view_snapshots__snapshot_edit_modal_validation_error.snap
---
source: crates/paladin-auth-tui/tests/view_snapshots.rs
expression: rendered
---
┌ Paladin Auth [plaintext] ────────────────────────────────────────────────────┐
│ Search:                                                                      │
│ ──────────────────────────────────────────────────────────────────────────── │
│ ▶ GitH┌ Edit account ────────────────────────────────────────────────┐55 062 │
│       │ Editing the following account:                               │       │
│       │ GitHub:ben@example.com                                       │       │
│       │                                                              │       │
│       │ Label:      [ ben@example.com ]                              │       │
│       │ Issuer:     [ GitHub ]                                       │       │
│       │ Icon hint:    Leave unchanged      Default from issuer       │       │
│       │ Slug:       [ Bad Slug! ]                                    │       │
│       │                                                              │       │
│       │ validation error: icon_hint: invalid_chars                   │       │
│       │                                                              │       │
│       │                                                              │       │
│       │      Tab/Shift-Tab cycle  ·  Enter submit  ·  Esc cancel     │       │
│       └──────────────────────────────────────────────────────────────┘       │
│ ──────────────────────────────────────────────────────────────────────────── │
│ [↑↓] move  [enter] copy  [C] copy-next  [n] next-HOTP  [a] add  [/] find     │
└──────────────────────────────────────────────────────────────────────────────┘
